# VortexEngineEx

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: basic.fs  basic.vs  phong.fs  phong.vs  texture.vs
src/: engine.cpp  engine.h  main.cpp
src/audio/: audio_generator.h  audio_manager.cpp  audio_manager.h
src/core/: frustum.h  intersection.h  ray.cpp  ray.h  simple_geometry_objects.h
src/graphics/: api.h  camera.cpp  camera.h  mesh.cpp  mesh.h  model.h  skybox.cpp  skybox.h  state.cpp  state.h  vertex.h  window.cpp  window.h
src/graphics/api/: buffer.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
src/utils/: logging.cpp  logging.h  math_funcs.cpp  math_funcs.h  obj_loader.cpp  obj_loader.h  timer.cpp  timer.h  utils.cpp  utils.h
